Portfolio, Liks connected with Backoffice

--- a/src/assets/_envs.scss
+++ b/src/assets/_envs.scss
@@ -60,3 +60,9 @@ $violet-600: #5B576B;
 $violet-700: #484554; 
 $violet-800: #383542; 
 $violet-900: #25232C; 
+
+$radius-5: 5px;
+
+$nav-items: $neutral-800;
+$main-green: $green-200;
+$main-title: $neutral-800;
