--- a/src/components/index/Index.astro
+++ b/src/components/index/Index.astro
@@ -1,12 +1,8 @@
 ---
 import "./index.scss";
-import CardLink from "./Cards.astro";
 import Instagram from "./Icons/Instagram.astro";
 import Tiktok from "./Icons/Tiktok.astro";
-import CardSocial from "./CardSocial.astro";
 import Whatsapp from "./Icons/Whatsapp.astro";
-import Cv from "./Icons/Cv.astro";
-import Linkedin from "./Icons/Linkedin.astro";
 
 const link = {
 	instagram: "https://www.instagram.com/jorgeemilianom/",
@@ -18,30 +14,18 @@ const link = {
 	<div class="logo"></div>
 	<h1>Jorge | Software Developer</h1>
 	<h2>Desarrollo ideas y doy soluciones mediante código.</h2>
-	<CardLink
-		title="Mi emprendimiento de StartUp Tecnológica"
-		href="https://gesprender.com"
-	/>
 
-	<CardSocial
-		title="Linkedin"
-		href="https://www.linkedin.com/in/jorgeemilianom/"
+	<div
+		id="links-container"
+		class="flex flex-column flex-items-center text-center gap-2"
 	>
-		<Linkedin />
-	</CardSocial>
-
-	<CardSocial title="Mi CV" href="/src/assets/documents/CV.pdf">
-		<Cv />
-	</CardSocial>
-
-	<CardSocial
-		title="Contrata mis servicios"
-		href="https://wa.me/5493424416404"
-	>
-		<Whatsapp />
-	</CardSocial>
+		<p>...</p>
+	</div>
 
 	<div class="flex flex-column social">
+		<a href={link.instagram} target="_blank" class="bton">
+			<Whatsapp />
+		</a>
 		<a href={link.instagram} target="_blank" class="bton">
 			<Instagram />
 		</a>
@@ -51,3 +35,44 @@ const link = {
 	</div>
 	<div class="text-bottom">GesPrender <br /><span>.com</span></div>
 </main>
+
+<script>
+	interface ApiResponse {
+		message: string;
+		data: Link[];
+		status: boolean;
+	}
+
+	interface Link {
+		id: number;
+		title: string;
+		link: string;
+	}
+	const protocole:string = globalThis.location.hostname == 'localhost' ? 'http' : 'https';
+	fetch(`${protocole}://${globalThis.location.hostname}/api/index.php?link-getall=1`, { method: "GET" })
+		.then((response) => response.json())
+		.then((objetResponse: ApiResponse) => {
+			if(!objetResponse?.status) return;
+
+			let links_container:string = "";
+			objetResponse?.data.map((element: Link) => {
+				let component:string = `
+            <a href="${element?.link}" target="_blank" class="p-2 flex flex-content-center cardlink">
+                <div class="cardlink-icon" >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5"/>
+                    </svg>
+                </div>
+                <div class="cardlink-title">${element?.title}</div>
+            </a>
+            `;
+				links_container += component;
+			});
+
+			let div_element: HTMLDivElement|null = document.getElementById("links-container") as HTMLDivElement;
+			div_element.innerHTML = links_container;
+		})
+		.catch((error) => {
+			console.log(error);
+		});
+</script>
