--- a/src/components/index/index.scss
+++ b/src/components/index/index.scss
@@ -3,9 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
 
 body {
-    background: rgb(19,18,24);
-    background: radial-gradient(circle, rgba(19,18,24,1) 0%, rgba(38,36,48,1) 100%);
     font-family: 'Montserrat', sans-serif;
+    background-color: #010408;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg fill='%2325232c' fill-opacity='0.15'%3E%3Cpath fill-rule='evenodd' d='M5 3.59L1.46.05.05 1.46 3.59 5 .05 8.54l1.41 1.41L5 6.41l3.54 3.54 1.41-1.41L6.41 5l3.54-3.54L8.54.05 5 3.59zM17 2h24v2H17V2zm0 4h24v2H17V6zM2 17h2v24H2V17zm4 0h2v24H6V17z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 main {
@@ -37,37 +37,41 @@ main {
         font-weight: 300;
     }
 
-    .cardlink {
-        border: $neutral-400-50 solid 1px;
-        border-radius: 5px;
-        color: $neutral-800;
-        text-decoration: none;
-        width: 100%;
-        min-height: 20px;
-        font-weight: 400;
-        font-size: 12px;
-        transition: .8s;
-        max-width: 800px;
-        background: $neutral-100;
-
-        &-icon {
-            width: 50px;
-
-            svg {
-                margin-top: 8px;
-            }
-        }
-
-        &-title {
-            text-align: center;
+    #links-container {
+        width: -webkit-fill-available;
+        
+        .cardlink {
+            border: $neutral-400-50 solid 1px;
+            border-radius: 5px;
+            color: $neutral-800;
+            text-decoration: none;
             width: 100%;
+            min-height: 20px;
+            font-weight: 400;
+            font-size: 12px;
+            transition: .8s;
+            max-width: 800px;
+            background: $neutral-100;
+
+            &-icon {
+                width: 50px;
+
+                svg {
+                    margin-top: 8px;
+                }
+            }
+
+            &-title {
+                text-align: center;
+                width: 100%;
+            }
+
         }
 
-    }
-
-    .cardlink:hover {
-        background: $neutral-200;
-        transition: .8s;
+        .cardlink:hover {
+            background: $neutral-200;
+            transition: .8s;
+        }
     }
 
     .social {
@@ -89,13 +93,15 @@ main {
             color: inherit;
         }
     }
+
     .text-bottom {
         margin-top: 30px;
         text-align: left;
         padding-left: 10px;
-        border-left: #ACA9BB solid 5px ;
+        border-left: #ACA9BB solid 5px;
         font-size: 24px;
         font-weight: 400;
+
         span {
             font-size: 15px;
         }
