--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -1,26 +1,10 @@
 @import '../assets/envs';
 @import '../assets/lib';
+@import '../assets/global.scss';
 
 header {
     color: $neutral-300;
     ul {
         list-style: none;
-    }
-}
-.credits {
-    background: #ffffff97;    
-    margin: auto;
-    margin-top: 100px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    width: auto;
-    max-width: 800px;
-    bottom: 30px;
-    font-weight: 300;
-    .gesprender {
-        font-weight: 400;
-        color: $violet-800;
-        margin-left: 5px;
     }
 }
