--- a/src/assets/_lib.scss
+++ b/src/assets/_lib.scss
@@ -64,3 +64,55 @@
         padding: 25px;
     }
 }
+
+.m {
+    &l {
+        &-1 {
+            margin-left: 5px;
+        }
+        &-2 {
+            margin-left: 10px;
+        }
+        &-3 {
+            margin-left: 15px;
+        }
+        &-4 {
+            margin-left: 20px;
+        }
+        &-5 {
+            margin-left: 25px;
+        }
+    }
+    &t {
+        &-1 {
+            margin-top: 5px;
+        }
+        &-2 {
+            margin-top: 10px;
+        }
+        &-3 {
+            margin-top: 15px;
+        }
+        &-4 {
+            margin-top: 20px;
+        }
+        &-5 {
+            margin-top: 25px;
+        }
+    }
+    &-1 {
+        margin: 5px;
+    }
+    &-2 {
+        margin: 10px;
+    }
+    &-3 {
+        margin: 15px;
+    }
+    &-4 {
+        margin: 20px;
+    }
+    &-5 {
+        margin: 25px;
+    }
+}
