--- a/src/components/carrera-full-stack/carerafullstack.astro
+++ b/src/components/carrera-full-stack/carerafullstack.astro
@@ -5,7 +5,9 @@ import { cursosFrontend } from "./cursos.js";
 
 <main class="cfs flex flex-column gap-2">
     <section class="cfs-head">
-        <h1>Carrera de FrontEnd Developer</h1>
+        <div class="cfs-head-title-bg">
+        </div>
+        <h1>Carrera de<br>FrontEnd Developer</h1>
         <ul>
             <p>Front End</p>
             <li><a href="#">Nivel 1: Fundamentos del Desarrollo Web</a></li>
