--- a/src/components/carrera-full-stack/carerafullstack.scss
+++ b/src/components/carrera-full-stack/carerafullstack.scss
@@ -1,11 +1,23 @@
 @import '../../assets/global.scss';
 
 .cfs {
+    display: flex;
+    padding: 5px;
+    margin-top: 40px;
     &-head {
+        &-title-bg {
+            background: url('/src/assets/img/b.webp') center/cover no-repeat;
+            opacity: .2;
+            height: 100px;
+            width: 100%;
+        }
         h1 {
+            opacity: 1;
             font-weight: 700;
-            font-size: 22px;
+            font-size: 30px;
             margin: 0 0 15px 0;
+            position: absolute;
+            top: 80px;
         }
         ul {
             padding: 0;
@@ -29,6 +41,9 @@
         }
     }
     &-content {
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
         &-title {
             font-size: 22px;
             font-weight: 600;
@@ -38,6 +53,9 @@
 
     &-curse {
         margin-bottom: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
         &-subtitle {
             font-size: 16px;
             font-weight: 500;
@@ -47,6 +65,7 @@
             font-size: 12px;
             font-weight: 300;
             padding-left: 10px;
+            color: $neutral-400;
         }
         &-video {
             display: flex;
@@ -61,7 +80,21 @@
                 text-decoration: none;
                 color: inherit;
                 font-size: 14px;
+                color: $neutral-400;
             }
         }
+    }
+}
+
+.curse-container {
+    color: $neutral-200;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        text-align: center;
+    }
+    a {
+        color: $blue-300;
+        font-size: 12px;
     }
 }
