--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import BodyComponent from '../components/index/Index.astro';
 ---
 
-<Layout title="Jorge | Coach, Software Developer." cancelNav={true}>
+<Layout title="Jorge | Software Developer." cancelNav={false} titleNav={'Hola!'} >
 	<BodyComponent />
 </Layout>
