--- a/src/pages/carrera-full-stack/index.astro
+++ b/src/pages/carrera-full-stack/index.astro
@@ -3,6 +3,6 @@ import Layout from '../../layouts/Layout.astro';
 import BodyComponent from '../../components/carrera-full-stack/carerafullstack.astro';
 ---
 
-<Layout title="Jorge | Coach, Software Developer." cancelNav={true}>
+<Layout title="Jorge | Software Developer." cancelNav={false}  titleNav={'Hola!'} >
 	<BodyComponent />
 </Layout>
